# ECE650_Waterloo

./: README.md
a1/: a1ece650_re.py
a2/: CMakeLists.txt  Table of Contents.html  a2-ece650.cpp  a3-ece650.cpp  graph.hpp
a3/: CMakeLists.txt  a1-ece650.py  a2-ece650.cpp  a3-ece650.cpp  graph.cpp  rgen.cpp
a4/: CMakeLists-for-a4.txt  Table of Contents.html  a4-ece650.cpp  graph.hpp  solver.cpp  solver.hpp
project/: CMakeLists.txt  EIterator.cpp  EIterator.h  IJK.cpp  IJK.h  PlainInterpreter.cpp  PlainInterpreter.h  Solver.cpp  Solver.h  a2ece650.cpp  a4ece650.cpp  apece650.cpp  datatype.cpp  datatype.h
